// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders without crashing even with no text or emoji data 1`] = `
<div
  className="card"
>
  <section
    className="card__content"
  >
    <div
      className="card__pic"
    >
      <img
        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR59xqLYNFvQDBh8dq_jnNxUHtEJz-YzHo6ZvBuKowwu-7s-H9j7A"
      />
    </div>
    <p
      className="card__content-text"
    />
    <p
      className="card__content-emoji"
    />
    <button
      aria-label="Delete"
      className="card__delete"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </section>
</div>
`;

exports[`Card that it matches an existing snapshot 1`] = `
<div
  className="card"
>
  <section
    className="card__content"
  >
    <div
      className="card__pic"
    >
      <img
        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5tLY_SnBx4SaOCp_JOJMfDHY3ynnhqVJhmTZhroOjUkAm88T7KA"
      />
    </div>
    <p
      className="card__content-text"
    >
      this is test text string
    </p>
    <p
      className="card__content-emoji"
    >
      test emoji
    </p>
    <button
      aria-label="Delete"
      className="card__delete"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </section>
</div>
`;
